--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">Pose Detection</string>
     <string name="pose_image">Pose Image</string>
+
+    <string name="password">Password</string>
+    <string name="email_address">Email Address</string>
+    <string name="login">Login</string>
+    <string name="invalid_email_address">Invalid email address</string>
+    <string name="password_atleast_5_chars">Password must be of at-least 5 characters</string>
+    <string name="open_camera">Open Camera</string>
 </resources>
